force-app/main/default/objects/Chart_of_Account__c/Chart_of_Account__c.object-meta.xml
<CustomObject>
    <description>Chart of Accounts for book keeping.</description>
    <label>Chart of Account</label>
    <nameField>
        <label>Chart of Accounts</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart of Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>