force-app/main/default/objects/Chart_of_Account__c/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <label>Account Description</label>
    <type>TextArea</type>
</CustomField>