force-app/main/default/objects/Chart_of_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>COGS</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Current Assets</fullName>
            </value>
            <value>
                <fullName>Current Liabilities</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Liability Accounts</fullName>
            </value>
            <value>
                <fullName>Long-Term Liability</fullName>
            </value>
            <value>
                <fullName>Other Assets</fullName>
            </value>
            <value>
                <fullName>Other Current Assets</fullName>
            </value>
            <value>
                <fullName>Other Expenses</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Short-Term Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>