force-app/main/default/objects/Chart_of_Account__c/fields/Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Type__c</fullName>
    <label>Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash On Hand</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
            <value>
                <fullName>Rents Held in Trust</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Trust Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>