force-app/main/default/objects/Chart_of_Account__c/fields/GL_Number__c.field-meta.xml
<CustomField>
    <fullName>GL_Number__c</fullName>
    <label>GL Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>