force-app/main/default/objects/Chart_of_Account__c/fields/QB_ChartofAccount_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_ChartofAccount_ID__c</fullName>
    <label>QB ChartofAccount ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>