force-app/main/default/objects/Chart_of_Account__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Financial Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Cash Flow Statement</fullName>
            </value>
            <value>
                <fullName>Statement of Changes in Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>