force-app/main/default/objects/Chart_of_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Account_Description__c</columns>
    <columns>GL_Number__c</columns>
    <columns>Report_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>